# 3dfsb

./: .gitignore  3dfsb.c  3dfsb.h  CHANGELOG  CMakeLists.txt  ChangeLog  README  README.md  README_sdl_gstreamer.txt  common.c  common.h  compile.sh  compile_dontwork_on_pluto.sh  compile_example.sh  compile_example_dontwork.sh  compile_sdl-gstreamer.sh  compile_with_gstreamer_from_source.sh  config.c  config.h  convert.sh  debug.sh  gstreamer_cube_problems.txt  input.c  input.h  media.c  media.h  run.sh  sdl-gstreamer.c  str_replace.c  str_replace.h  tdfsb.c  tools.c  tools.h
appsink/: compile.sh  main.c  main.c_hardcoded_filename_to_discover_uri_cannot_have_quotes_around_it
cmake/Modules/: FindLibM.cmake  FindXdo.cmake
images/: .gitignore
resources/: xorg.conf
sdl/: make.sh
testfiles/: website.desktop
wiki/: Engine.md  Google Summer of Code 2015.md  GoogleSummerOfCode2015.md  IRC.md  Index.md  Vision.md
